confs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p3-deployment
  namespace: dev
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: p3-deployment
  template:
    metadata:
      labels:
        app: p3-deployment
    spec:
      serviceAccountName: p3-app

      securityContext:
        # runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault

      containers:
        - image: valispac/test_app
          name: valispac
          imagePullPolicy: Always
          ports:
            - containerPort: 8888

          securityContext:
            allowPrivileageEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
