confs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p3-service
spec:
  ports:
    - port: 8080
  selector:
    app: argocluster
